ccmat-macros/tests/ui/matrix_3x3_frac_error.rs
use ccmat_macros::matrix_3x3;

fn main() {
    let mat = matrix_3x3![
        2/4 2 3;
        4 5 6.1;
        7 8 9;
    ];
}
